<resources>
    <string name="app_name">poms1</string>
    <string name="text_sqrt">SQRT</string>
    <string name="text_power">^</string>
    <string name="text_factorial">!</string>
    <string name="text_clear">CLEAR</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_plus">+</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_minus">-</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_multiply">*</string>
    <string name="text_0">0</string>
    <string name="text_dot">.</string>
    <string name="text_equals">=</string>
    <string name="text_divide">/</string>
    <string name="text_left_bracket">(</string>
    <string name="text_right_bracket">)</string>
    <string name="text_delete">DEL</string>
    <string name="text_lg">LG</string>
    <string name="text_sin">SIN</string>
    <string name="text_cos">COS</string>
    <string name="text_tg">TG</string>
    <string name="text_ctg">CTG</string>
</resources>
